Fixed weird spacing issue with code blocks

--- a/_sass/jekyll-theme-simple-design/_base.scss
+++ b/_sass/jekyll-theme-simple-design/_base.scss
@@ -18,10 +18,6 @@ img {
     margin: $spacing-3 0pt;
 }
 
-pre {
-    overflow-x: auto;
-}
-
 table {
     margin: $spacing-3 0pt;
 }
